Complete verb lemma table with Chinese and Greek translations for all 100 verbs

--- a/index.html
+++ b/index.html
@@ -1414,13 +1414,13 @@
       "answer": {en:"answer", la:"respondēre", ro:"a răspunde", it:"rispondere", fr:"répondre", pt:"responder", es:"responder", de:"antworten",
         arc:P("ܥܢܐ","ʿna"), ar:P("أجاب","ajāba"), he:P("לענות","laʿanot"), ru:P("отвечать","otvechat'"), ja:P("答える","kotaeru"), zh:P("回答","huídá"), el:P("απαντώ","apantó")},
       "give": {en:"give", la:"dare", ro:"a da", it:"dare", fr:"donner", pt:"dar", es:"dar", de:"geben",
-        arc:P("ܝܗܒ","yahav"), ar:P("أعطى","aʿṭā"), he:P("לתת","latet"), ru:P("давать","davat'"), ja:P("あげる/くれる","ageru/kureru")},
+        arc:P("ܝܗܒ","yahav"), ar:P("أعطى","aʿṭā"), he:P("לתת","latet"), ru:P("давать","davat'"), ja:P("あげる/くれる","ageru/kureru"), zh:P("给","gěi"), el:P("δίνω","díno")},
       "take": {en:"take", la:"capĕre", ro:"a lua", it:"prendre", fr:"prendre", pt:"pegar", es:"tomar", de:"nehmen",
         arc:P("ܢܣܒ","nasab"), ar:P("أخذ","akhadha"), he:P("לקחת","lakachat"), ru:P("брать","brat'"), ja:P("取る","toru"), zh:P("拿","ná"), el:P("παίρνω","paírno")},
       "get": {en:"get", la:"accipĕre", ro:"a obține", it:"ottenere", fr:"obtenir", pt:"conseguir", es:"obtener", de:"bekommen",
         arc:P("ܫܟܚ","shkakh"), ar:P("حصل على","ḥaṣala ʿalā"), he:P("לקבל","lekabel"), ru:P("получать","poluchat'"), ja:P("得る","eru"), zh:P("得到","dédào"), el:P("παίρνω","paírno")},
       "put": {en:"put", la:"ponĕre", ro:"a pune", it:"mettere", fr:"mettre", pt:"colocar", es:"poner", de:"legen/stellen",
-        arc:P("ܣܝܡ","sim"), ar:P("وضع","waḍaʿa"), he:P("לשים","lasim"), ru:P("класть","klast'"), ja:P("置く","oku")},
+        arc:P("ܣܝܡ","sim"), ar:P("وضع","waḍaʿa"), he:P("לשים","lasim"), ru:P("класть","klast'"), ja:P("置く","oku"), zh:P("放","fàng"), el:P("βάζω","vázo")},
       "bring": {en:"bring", la:"ferre", ro:"a aduce", it:"portare", fr:"apporter", pt:"trazer", es:"traer", de:"bringen",
         arc:P("ܐܝܬܝ","ayti"), ar:P("جلب","jalaba"), he:P("להביא","lehavi"), ru:P("приносить","prinosit'"), ja:P("持ってくる","motte kuru"), zh:P("带来","dàilái"), el:P("φέρνω","férno")},
       "send": {en:"send", la:"mittĕre", ro:"a trimite", it:"mandare", fr:"envoyer", pt:"enviar", es:"enviar", de:"senden",
@@ -1472,83 +1472,83 @@
       "drive": {en:"drive", la:"gubernāre", ro:"a conduce", it:"guidare", fr:"conduire", pt:"dirigir", es:"conducir", de:"fahren",
         arc:P("ܕܒܪ","dbar"), ar:P("قاد","qāda"), he:P("לנהוג","linhog"), ru:P("водить","vodit'"), ja:P("運転する","unten suru"), zh:P("开","kāi"), el:P("οδηγώ","odigó")},
       "ride": {en:"ride", la:"equitāre", ro:"a călări", it:"cavalcare", fr:"monter", pt:"montar", es:"montar", de:"reiten",
-        arc:P("ܪܟܒ","rkab"), ar:P("ركب","rakiba"), he:P("לרכב","lirkov"), ru:P("ездить","ezdit'"), ja:P("乗る","noru")},
+        arc:P("ܪܟܒ","rkab"), ar:P("ركب","rakiba"), he:P("לרכב","lirkov"), ru:P("ездить","ezdit'"), ja:P("乗る","noru"), zh:P("骑","qí"), el:P("καβαλάω","kavaláo")},
       "fly": {en:"fly", la:"volāre", ro:"a zbura", it:"volare", fr:"voler", pt:"voar", es:"volar", de:"fliegen",
-        arc:P("ܦܪܚ","praḥ"), ar:P("طار","ṭāra"), he:P("לטוס","latus"), ru:P("летать","letat'"), ja:P("飛ぶ","tobu")},
+        arc:P("ܦܪܚ","praḥ"), ar:P("طار","ṭāra"), he:P("לטוס","latus"), ru:P("летать","letat'"), ja:P("飛ぶ","tobu"), zh:P("飞","fēi"), el:P("πετάω","petáo")},
       "swim": {en:"swim", la:"natāre", ro:"a înota", it:"nuotare", fr:"nager", pt:"nadar", es:"nadar", de:"schwimmen",
-        arc:P("ܣܚܐ","sḥa"), ar:P("سبح","sabaḥa"), he:P("לשחות","lishchot"), ru:P("плавать","plavat'"), ja:P("泳ぐ","oyogu")},
+        arc:P("ܣܚܐ","sḥa"), ar:P("سبح","sabaḥa"), he:P("לשחות","lishchot"), ru:P("плавать","plavat'"), ja:P("泳ぐ","oyogu"), zh:P("游泳","yóuyǒng"), el:P("κολυμπάω","kolympáo")},
       "cook": {en:"cook", la:"coquĕre", ro:"a găti", it:"cucinare", fr:"cuisiner", pt:"cozinhar", es:"cocinar", de:"kochen",
-        arc:P("ܒܫܠ","bshal"), ar:P("طبخ","ṭabakha"), he:P("לבשל","levashel"), ru:P("готовить","gotovit'"), ja:P("料理する","ryouri suru")},
+        arc:P("ܒܫܠ","bshal"), ar:P("طبخ","ṭabakha"), he:P("לבשל","levashel"), ru:P("готовить","gotovit'"), ja:P("料理する","ryouri suru"), zh:P("做","zuò"), el:P("μαγειρεύω","mageirévo")},
       "clean": {en:"clean", la:"mundāre", ro:"a curăța", it:"pulire", fr:"nettoyer", pt:"limpar", es:"limpiar", de:"reinigen",
-        arc:P("ܕܟܐ","dka"), ar:P("نظّف","naẓẓafa"), he:P("לנקות","lenakot"), ru:P("чистить","chistit'"), ja:P("掃除する","souji suru")},
+        arc:P("ܕܟܐ","dka"), ar:P("نظّف","naẓẓafa"), he:P("לנקות","lenakot"), ru:P("чистить","chistit'"), ja:P("掃除する","souji suru"), zh:P("清洁","qīngjié"), el:P("καθαρίζω","katharízo")},
       "wash": {en:"wash", la:"lavāre", ro:"a spăla", it:"lavare", fr:"laver", pt:"lavar", es:"lavar", de:"waschen",
-        arc:P("—","—"), ar:P("غسل","ghasala"), he:P("לשטוף","lishtof"), ru:P("мыть","myt'"), ja:P("洗う","arau")},
+        arc:P("—","—"), ar:P("غسل","ghasala"), he:P("לשטוף","lishtof"), ru:P("мыть","myt'"), ja:P("洗う","arau"), zh:P("洗","xǐ"), el:P("πλένω","pléno")},
       "build": {en:"build", la:"aedificāre", ro:"a construi", it:"costruire", fr:"construire", pt:"construir", es:"construir", de:"bauen",
-        arc:P("ܒܢܐ","bna"), ar:P("بنى","banā"), he:P("לבנות","livnot"), ru:P("строить","stroit'"), ja:P("建てる","tateru")},
+        arc:P("ܒܢܐ","bna"), ar:P("بنى","banā"), he:P("לבנות","livnot"), ru:P("строить","stroit'"), ja:P("建てる","tateru"), zh:P("建造","jiànzào"), el:P("χτίζω","chtízo")},
       "break": {en:"break", la:"frangĕre", ro:"a rupe", it:"rompere", fr:"casser", pt:"quebrar", es:"romper", de:"brechen",
-        arc:P("ܬܒܪ","tbar"), ar:P("كسر","kasara"), he:P("לשבור","lishbor"), ru:P("ломать","lomat'"), ja:P("壊す","kowasu")},
+        arc:P("ܬܒܪ","tbar"), ar:P("كسر","kasara"), he:P("לשבור","lishbor"), ru:P("ломать","lomat'"), ja:P("壊す","kowasu"), zh:P("打破","dǎpò"), el:P("σπάω","spáo")},
       "fix": {en:"fix", la:"reficĕre", ro:"a repara", it:"riparare", fr:"réparer", pt:"consertar", es:"reparar", de:"reparieren",
-        arc:P("ܬܩܢ","taqan"), ar:P("أصلح","aṣlaḥa"), he:P("לתקן","letaken"), ru:P("чинить","chinit'"), ja:P("直す","naosu")},
+        arc:P("ܬܩܢ","taqan"), ar:P("أصلح","aṣlaḥa"), he:P("לתקן","letaken"), ru:P("чинить","chinit'"), ja:P("直す","naosu"), zh:P("修理","xiūlǐ"), el:P("διορθώνω","diorthóno")},
       "choose": {en:"choose", la:"eligĕre", ro:"a alege", it:"scegliere", fr:"choisir", pt:"escolher", es:"elegir", de:"wählen",
-        arc:P("ܓܒܐ","gba"), ar:P("اختار","ikhtāra"), he:P("לבחור","livchor"), ru:P("выбирать","vybirat'"), ja:P("選ぶ","erabu")},
+        arc:P("ܓܒܐ","gba"), ar:P("اختار","ikhtāra"), he:P("לבחור","livchor"), ru:P("выбирать","vybirat'"), ja:P("選ぶ","erabu"), zh:P("选择","xuǎnzé"), el:P("επιλέγω","epilégo")},
       "change": {en:"change", la:"mutāre", ro:"a schimba", it:"cambiare", fr:"changer", pt:"mudar", es:"cambiar", de:"ändern",
-        arc:P("ܚܠܦ","ḥlap"), ar:P("غيّر","ghayyara"), he:P("לשנות","leshanot"), ru:P("менять","menyat'"), ja:P("変える","kaeru")},
+        arc:P("ܚܠܦ","ḥlap"), ar:P("غيّر","ghayyara"), he:P("לשנות","leshanot"), ru:P("менять","menyat'"), ja:P("変える","kaeru"), zh:P("改变","gǎibiàn"), el:P("αλλάζω","allázo")},
       "watch": {en:"watch", la:"observāre", ro:"a privi", it:"guardare", fr:"regarder", pt:"assistir", es:"mirar", de:"anschauen",
-        arc:P("ܢܛܪ","naṭar"), ar:P("شاهد","shāhada"), he:P("לצפות","litzpot"), ru:P("смотреть","smotret'"), ja:P("観る","miru")},
+        arc:P("ܢܛܪ","naṭar"), ar:P("شاهد","shāhada"), he:P("לצפות","litzpot"), ru:P("смотреть","smotret'"), ja:P("観る","miru"), zh:P("看","kàn"), el:P("βλέπω","blépo")},
       "play": {en:"play", la:"lūdĕre", ro:"a juca", it:"giocare", fr:"jouer", pt:"jogar", es:"jugar", de:"spielen",
-        arc:P("ܫܚܩ","shḥaq"), ar:P("لعب","laʿiba"), he:P("לשחק","lesachek"), ru:P("играть","igrat'"), ja:P("遊ぶ","asobu")},
+        arc:P("ܫܚܩ","shḥaq"), ar:P("لعب","laʿiba"), he:P("לשחק","lesachek"), ru:P("играть","igrat'"), ja:P("遊ぶ","asobu"), zh:P("玩","wán"), el:P("παίζω","paízo")},
       "work out": {en:"work out", la:"exercēre", ro:"a se antrena", it:"allenarsi", fr:"s'entraîner", pt:"treinar", es:"entrenar", de:"trainieren",
-        arc:P("—","—"), ar:P("تمرّن","tamarrana"), he:P("להתאמן","lehit'amen"), ru:P("тренироваться","trenirovat'sya"), ja:P("運動する","undou suru")},
+        arc:P("—","—"), ar:P("تمرّن","tamarrana"), he:P("להתאמן","lehit'amen"), ru:P("тренироваться","trenirovat'sya"), ja:P("運動する","undou suru"), zh:P("锻炼","duànliàn"), el:P("γυμνάζομαι","gymnázomai")},
       "love": {en:"love", la:"amāre", ro:"a iubi", it:"amare", fr:"aimer", pt:"amar", es:"amar", de:"lieben",
-        arc:P("ܪܚܡ","rḥam"), ar:P("أحب","aḥabba"), he:P("לאהוב","le'ehov"), ru:P("любить","lyubit'"), ja:P("愛する","aisuru")},
+        arc:P("ܪܚܡ","rḥam"), ar:P("أحب","aḥabba"), he:P("לאהוב","le'ehov"), ru:P("любить","lyubit'"), ja:P("愛する","aisuru"), zh:P("爱","ài"), el:P("αγαπώ","agapó")},
       "like": {en:"like", la:"placēre", ro:"a plăcea", it:"piacere", fr:"aimer", pt:"gostar", es:"gustar", de:"mögen",
-        arc:P("ܚܒܒ","ḥabab"), ar:P("أعجب","aʿjaba"), he:P("לחבב/לאהוב","lechabev/le'ehov"), ru:P("нравиться","nravit'sya"), ja:P("好き","suki")},
+        arc:P("ܚܒܒ","ḥabab"), ar:P("أعجب","aʿjaba"), he:P("לחבב/לאהוב","lechabev/le'ehov"), ru:P("нравиться","nravit'sya"), ja:P("好き","suki"), zh:P("喜欢","xǐhuān"), el:P("μου αρέσει","mou arései")},
       "hate": {en:"hate", la:"odisse", ro:"a urî", it:"odiare", fr:"détester", pt:"odiar", es:"odiar", de:"hassen",
-        arc:P("ܣܢܐ","sna"), ar:P("كره","kariha"), he:P("לשנוא","lisno"), ru:P("ненавидеть","nenavidet'"), ja:P("嫌う","kirau")},
+        arc:P("ܣܢܐ","sna"), ar:P("كره","kariha"), he:P("לשנוא","lisno"), ru:P("ненавидеть","nenavidet'"), ja:P("嫌う","kirau"), zh:P("恨","hèn"), el:P("μισώ","misó")},
       "feel": {en:"feel", la:"sentīre", ro:"a simți", it:"sentire", fr:"sentir", pt:"sentir", es:"sentir", de:"fühlen",
-        arc:P("ܚܫ","ḥsh"), ar:P("شعر","shaʿara"), he:P("להרגיש","lehargish"), ru:P("чувствовать","chuvstvovat'"), ja:P("感じる","kanjiru")},
+        arc:P("ܚܫ","ḥsh"), ar:P("شعر","shaʿara"), he:P("להרגיש","lehargish"), ru:P("чувствовать","chuvstvovat'"), ja:P("感じる","kanjiru"), zh:P("感觉","gǎnjué"), el:P("αισθάνομαι","aisthánomai")},
       "hope": {en:"hope", la:"spērāre", ro:"a spera", it:"sperare", fr:"espérer", pt:"esperar", es:"esperar", de:"hoffen",
-        arc:P("ܣܒܪ","sbar"), ar:P("رجا","rajā"), he:P("לקוות","lekavot"), ru:P("надеяться","nadeyat'sya"), ja:P("望む","nozomu")},
+        arc:P("ܣܒܪ","sbar"), ar:P("رجا","rajā"), he:P("לקוות","lekavot"), ru:P("надеяться","nadeyat'sya"), ja:P("望む","nozomu"), zh:P("希望","xīwàng"), el:P("ελπίζω","elpízo")},
       "plan": {en:"plan", la:"parāre", ro:"a planifica", it:"pianificare", fr:"planifier", pt:"planejar", es:"planear", de:"planen",
-        arc:P("ܬܪܨ","traṣ"), ar:P("خطّط","khaṭṭaṭa"), he:P("לתכנן","letakhnen"), ru:P("планировать","planirovat'"), ja:P("計画する","keikaku suru")},
+        arc:P("ܬܪܨ","traṣ"), ar:P("خطّط","khaṭṭaṭa"), he:P("לתכנן","letakhnen"), ru:P("планировать","planirovat'"), ja:P("計画する","keikaku suru"), zh:P("计划","jìhuà"), el:P("σχεδιάζω","schediázo")},
       "agree": {en:"agree", la:"assentīrī", ro:"a fi de acord", it:"essere d'accordo", fr:"être d'accord", pt:"concordar", es:"estar de acuerdo", de:"zustimmen",
-        arc:P("ܐܣܟܡ","askem"), ar:P("وافق","wāfaqa"), he:P("להסכים","lehaskim"), ru:P("соглашаться","soglashat'sya"), ja:P("同意する","doui suru")},
+        arc:P("ܐܣܟܡ","askem"), ar:P("وافق","wāfaqa"), he:P("להסכים","lehaskim"), ru:P("соглашаться","soglashat'sya"), ja:P("同意する","doui suru"), zh:P("同意","tóngyì"), el:P("συμφωνώ","symfonó")},
       "decide": {en:"decide", la:"decernĕre", ro:"a decide", it:"decidere", fr:"décider", pt:"decidir", es:"decidir", de:"entscheiden",
-        arc:P("ܦܣܩ","psaq"), ar:P("قرّر","qarrara"), he:P("להחליט","lehachlit"), ru:P("решать","reshat'"), ja:P("決める","kimeru")},
+        arc:P("ܦܣܩ","psaq"), ar:P("قرّر","qarrara"), he:P("להחליט","lehachlit"), ru:P("решать","reshat'"), ja:P("決める","kimeru"), zh:P("决定","juédìng"), el:P("αποφασίζω","apofasízo")},
       "believe": {en:"believe", la:"credĕre", ro:"a crede", it:"credere", fr:"croire", pt:"crer", es:"creer", de:"glauben",
-        arc:P("ܗܝܡܢ","haymen"), ar:P("آمن","āmana"), he:P("להאמין","leha'amin"), ru:P("верить","verit'"), ja:P("信じる","shinjiru")},
+        arc:P("ܗܝܡܢ","haymen"), ar:P("آمن","āmana"), he:P("להאמין","leha'amin"), ru:P("верить","verit'"), ja:P("信じる","shinjiru"), zh:P("相信","xiāngxìn"), el:P("πιστεύω","pistévo")},
       "explain": {en:"explain", la:"explicāre", ro:"a explica", it:"spiegare", fr:"expliquer", pt:"explicar", es:"explicar", de:"erklären",
-        arc:P("ܦܫܩ","pshaq"), ar:P("شرح","sharaḥa"), he:P("להסביר","lehasbir"), ru:P("объяснять","ob'yasnyat'"), ja:P("説明する","setsumei suru")},
+        arc:P("ܦܫܩ","pshaq"), ar:P("شرح","sharaḥa"), he:P("להסביר","lehasbir"), ru:P("объяснять","ob'yasnyat'"), ja:P("説明する","setsumei suru"), zh:P("解释","jiěshì"), el:P("εξηγώ","exigó")},
       "show": {en:"show", la:"ostendĕre", ro:"a arăta", it:"mostrare", fr:"montrer", pt:"mostrar", es:"mostrar", de:"zeigen",
-        arc:P("ܚܘܝ","ḥawi"), ar:P("أظهر","aẓhara"), he:P("להראות","lehar'ot"), ru:P("показывать","pokazyvat'"), ja:P("見せる","miseru")},
+        arc:P("ܚܘܝ","ḥawi"), ar:P("أظهر","aẓhara"), he:P("להראות","lehar'ot"), ru:P("показывать","pokazyvat'"), ja:P("見せる","miseru"), zh:P("显示","xiǎnshì"), el:P("δείχνω","deíchno")},
       "check": {en:"check", la:"inspicĕre", ro:"a verifica", it:"controllare", fr:"vérifier", pt:"verificar", es:"verificar", de:"prüfen",
-        arc:P("ܒܩܪ","baqar"), ar:P("تحقّق","taḥaqqaqa"), he:P("לבדוק","livdok"), ru:P("проверять","proveryat'"), ja:P("確認する","kakunin suru")},
+        arc:P("ܒܩܪ","baqar"), ar:P("تحقّق","taḥaqqaqa"), he:P("לבדוק","livdok"), ru:P("проверять","proveryat'"), ja:P("確認する","kakunin suru"), zh:P("检查","jiǎnchá"), el:P("ελέγχω","eléncho")},
       "share": {en:"share", la:"communicāre", ro:"a împărtăși", it:"condividere", fr:"partager", pt:"compartilhar", es:"compartir", de:"teilen",
-        arc:P("ܫܘܬܦ","shutaf"), ar:P("شارك","shāraka"), he:P("לשתף","leshatef"), ru:P("делиться","delit'sya"), ja:P("共有する","kyouyuu suru")},
+        arc:P("ܫܘܬܦ","shutaf"), ar:P("شارك","shāraka"), he:P("לשתף","leshatef"), ru:P("делиться","delit'sya"), ja:P("共有する","kyouyuu suru"), zh:P("分享","fēnxiǎng"), el:P("μοιράζομαι","moirázomai")},
       "carry": {en:"carry", la:"portāre", ro:"a purta", it:"portare", fr:"porter", pt:"carregar", es:"llevar", de:"tragen",
-        arc:P("ܫܩܠ","shqal"), ar:P("حمل","ḥamala"), he:P("לשאת","laset"), ru:P("носить","nosit'"), ja:P("運ぶ","hakobu")},
+        arc:P("ܫܩܠ","shqal"), ar:P("حمل","ḥamala"), he:P("לשאת","laset"), ru:P("носить","nosit'"), ja:P("運ぶ","hakobu"), zh:P("携带","xiédài"), el:P("μεταφέρω","metaféro")},
       "hold": {en:"hold", la:"tenēre", ro:"a ține", it:"tenere", fr:"tenir", pt:"segurar", es:"sostener", de:"halten",
-        arc:P("ܐܚܕ","aḥed"), ar:P("أمسك","amsaka"), he:P("להחזיק","lehachzik"), ru:P("держать","derzhat'"), ja:P("持つ","motsu")},
+        arc:P("ܐܚܕ","aḥed"), ar:P("أمسك","amsaka"), he:P("להחזיק","lehachzik"), ru:P("держать","derzhat'"), ja:P("持つ","motsu"), zh:P("拿","ná"), el:P("κρατώ","krató")},
       "cut": {en:"cut", la:"secāre", ro:"a tăia", it:"tagliare", fr:"couper", pt:"cortar", es:"cortar", de:"schneiden",
-        arc:P("ܦܣܩ","psaq"), ar:P("قطع","qaṭaʿa"), he:P("לחתוך","lachtokh"), ru:P("резать","rezat'"), ja:P("切る","kiru")},
+        arc:P("ܦܣܩ","psaq"), ar:P("قطع","qaṭaʿa"), he:P("לחתוך","lachtokh"), ru:P("резать","rezat'"), ja:P("切る","kiru"), zh:P("切","qiē"), el:P("κόβω","kóvo")},
       "turn": {en:"turn", la:"vertĕre", ro:"a întoarce", it:"girare", fr:"tourner", pt:"virar", es:"girar", de:"drehen",
-        arc:P("ܗܦܟ","hapakh"), ar:P("دار","dāra"), he:P("לסובב","lesovev"), ru:P("поворачивать","povorachivat'"), ja:P("回す","mawasu")},
+        arc:P("ܗܦܟ","hapakh"), ar:P("دار","dāra"), he:P("לסובב","lesovev"), ru:P("поворачивать","povorachivat'"), ja:P("回す","mawasu"), zh:P("转","zhuǎn"), el:P("γυρίζω","gyrízo")},
       "sit": {en:"sit", la:"sedēre", ro:"a sta jos", it:"sedersi", fr:"s'asseoir", pt:"sentar-se", es:"sentarse", de:"sitzen",
-        arc:P("ܝܬܒ","yeteb"), ar:P("جلس","jalasa"), he:P("לשבת","lashevet"), ru:P("сидеть","sidet'"), ja:P("座る","suwaru")},
+        arc:P("ܝܬܒ","yeteb"), ar:P("جلس","jalasa"), he:P("לשבת","lashevet"), ru:P("сидеть","sidet'"), ja:P("座る","suwaru"), zh:P("坐","zuò"), el:P("κάθομαι","káthomai")},
       "stand": {en:"stand", la:"stāre", ro:"a sta în picioare", it:"stare", fr:"se tenir", pt:"ficar de pé", es:"estar de pie", de:"stehen",
-        arc:P("ܩܡ","qam"), ar:P("وقف","waqafa"), he:P("לעמוד","la'amod"), ru:P("стоять","stoyat'"), ja:P("立つ","tatsu")},
+        arc:P("ܩܡ","qam"), ar:P("وقف","waqafa"), he:P("לעמוד","la'amod"), ru:P("стоять","stoyat'"), ja:P("立つ","tatsu"), zh:P("站","zhàn"), el:P("στέκομαι","stékomai")},
       "wake": {en:"wake", la:"expergīscī", ro:"a se trezi", it:"svegliarsi", fr:"se réveiller", pt:"acordar", es:"despertarse", de:"aufwachen",
-        arc:P("ܥܘܪ","ʿur"), ar:P("استيقظ","istayqaẓa"), he:P("להתעורר","lehit'orer"), ru:P("просыпаться","prosypat'sya"), ja:P("起きる","okiru")},
+        arc:P("ܥܘܪ","ʿur"), ar:P("استيقظ","istayqaẓa"), he:P("להתעורר","lehit'orer"), ru:P("просыпаться","prosypat'sya"), ja:P("起きる","okiru"), zh:P("醒","xǐng"), el:P("ξυπνάω","xypnáo")},
       "fall": {en:"fall", la:"cadĕre", ro:"a cădea", it:"cadere", fr:"tomber", pt:"cair", es:"caer", de:"fallen",
-        arc:P("ܢܦܠ","nafal"), ar:P("سقط","saqaṭa"), he:P("ליפול","lipol"), ru:P("падать","padat'"), ja:P("落ちる","ochiru")},
+        arc:P("ܢܦܠ","nafal"), ar:P("سقط","saqaṭa"), he:P("ליפול","lipol"), ru:P("падать","padat'"), ja:P("落ちる","ochiru"), zh:P("掉","diào"), el:P("πέφτω","péfto")},
       "win": {en:"win", la:"vincĕre", ro:"a câștiga", it:"vincere", fr:"gagner", pt:"ganhar", es:"ganar", de:"gewinnen",
-        arc:P("ܙܟܐ","zkhā"), ar:P("فاز","fāza"), he:P("לנצח","lenatzeach"), ru:P("выигрывать","vyigryvat'"), ja:P("勝つ","katsu")},
+        arc:P("ܙܟܐ","zkhā"), ar:P("فاز","fāza"), he:P("לנצח","lenatzeach"), ru:P("выигрывать","vyigryvat'"), ja:P("勝つ","katsu"), zh:P("赢","yíng"), el:P("νικάω","nikáo")},
       "lose": {en:"lose", la:"perdĕre", ro:"a pierde", it:"perdere", fr:"perdre", pt:"perder", es:"perder", de:"verlieren",
-        arc:P("ܐܒܕ","avad"), ar:P("خسر","khasira"), he:P("להפסיד","lehafsid"), ru:P("проигрывать","proigryvat'"), ja:P("負ける","makeru")},
+        arc:P("ܐܒܕ","avad"), ar:P("خسر","khasira"), he:P("להפסיד","lehafsid"), ru:P("проигрывать","proigryvat'"), ja:P("負ける","makeru"), zh:P("输","shū"), el:P("χάνω","cháno")},
       "order": {en:"order", la:"iubēre", ro:"a comanda", it:"ordinare", fr:"commander", pt:"pedir", es:"pedir", de:"bestellen",
-        arc:P("ܛܠܒ","ṭlab"), ar:P("طلب","ṭalaba"), he:P("להזמין","lehazmin"), ru:P("заказывать","zakazyvat'"), ja:P("注文する","chuumon suru")},
+        arc:P("ܛܠܒ","ṭlab"), ar:P("طلب","ṭalaba"), he:P("להזמין","lehazmin"), ru:P("заказывать","zakazyvat'"), ja:P("注文する","chuumon suru"), zh:P("点","diǎn"), el:P("παραγγέλλω","parangéllo")},
       "reserve": {en:"reserve", la:"reservāre", ro:"a rezerva", it:"prenotare", fr:"réserver", pt:"reservar", es:"reservar", de:"reservieren",
-        arc:P("ܚܙܐ","ḥzā (booking)"), ar:P("حجز","ḥajaza"), he:P("להזמין/לשריין","lehazmin/leshayen"), ru:P("бронировать","bronirovat'"), ja:P("予約する","yoyaku suru")}
+        arc:P("ܚܙܐ","ḥzā (booking)"), ar:P("حجز","ḥajaza"), he:P("להזמין/לשריין","lehazmin/leshayen"), ru:P("бронировать","bronirovat'"), ja:P("予約する","yoyaku suru"), zh:P("预订","yùdìng"), el:P("κρατώ","krató")}
     };
 
     // Build VERB_LEMMAS from EN_100, with safe fallback
