--- a/tsi/index.html
+++ b/tsi/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TSI Method™ - Transfer-Based Scaffolded Immersion</title>
+
     <link rel="stylesheet" href="style.css">
+
+    <!-- Tailwind + Icons -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- Charts (Dashboards) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
-    <script src="components/navbar.js"></script>
-    <script src="components/footer.js"></script>
+    <!-- Web components -->
+    <script src="components/navbar.js" defer></script>
+    <script src="components/footer.js" defer></script>
 
     <style>
         /* Small extras to make dashboards feel "instrument panel" like, without fighting your CSS file */
         .tsi-card { border: 1px solid rgba(15,23,42,.08); }
         .tsi-kpi { background: linear-gradient(180deg, rgba(255,255,255,.96), rgba(255,255,255,.90)); }
-        .tsi-gridline { background-image: linear-gradient(to right, rgba(2,6,23,.05) 1px, transparent 1px),
-                                         linear-gradient(to bottom, rgba(2,6,23,.05) 1px, transparent 1px);
-                        background-size: 28px 28px; }
+        .tsi-gridline {
+            background-image:
+                linear-gradient(to right, rgba(2,6,23,.05) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(2,6,23,.05) 1px, transparent 1px);
+            background-size: 28px 28px;
+        }
         .tsi-badge { font-variant-numeric: tabular-nums; }
         canvas { max-height: 360px; }
     </style>
@@ -41,6 +47,7 @@
             </div>
         </div>
     </section>
+
     <!-- What Is TSI Method -->
     <section class="py-20 bg-white">
         <div class="container mx-auto px-6">
@@ -54,22 +61,23 @@
             </div>
         </div>
     </section>
-<!-- TSI Visual -->
-<section class="py-16 bg-white">
-  <div class="container mx-auto px-6 text-center">
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">TSI Visual Overview</h2>
 
-    <div class="max-w-5xl mx-auto">
-      <img
-        src="docs/pics/Untitled%20design%20%282%29.png"
-        alt="TSI visual"
-        loading="lazy"
-        decoding="async"
-        class="mx-auto rounded-2xl shadow-xl w-full"
-      />
-    </div>
-  </div>
-</section>
+    <!-- TSI Visual -->
+    <section class="py-16 bg-white">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">TSI Visual Overview</h2>
+
+            <div class="max-w-5xl mx-auto">
+                <img
+                    src="docs/pics/Untitled%20design%20%282%29.png"
+                    alt="TSI visual"
+                    loading="lazy"
+                    decoding="async"
+                    class="mx-auto rounded-2xl shadow-xl w-full"
+                />
+            </div>
+        </div>
+    </section>
 
     <!-- TSI Architecture -->
     <section class="py-20 bg-gray-50">
@@ -217,30 +225,60 @@
                             <span class="text-xs tsi-badge px-2 py-1 rounded-full bg-gray-100 text-gray-700 border border-gray-200">Interactive</span>
                         </div>
 
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Preset context</label>
-                        <select id="presetContext" class="w-full rounded-lg border border-gray-200 px-3 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <!-- Preset context select -->
+                        <label for="presetContext" class="block text-sm font-medium text-gray-700 mb-2">
+                            Preset context
+                        </label>
+                        <select
+                            id="presetContext"
+                            class="w-full rounded-lg border border-gray-200 px-3 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+                        >
                             <option value="spoken">Everyday spoken (estimate)</option>
                             <option value="written">General written (estimate)</option>
                             <option value="podcast">Podcasts / captions (estimate)</option>
                         </select>
 
+                        <!-- Known words slider -->
                         <div class="mt-5">
                             <div class="flex items-center justify-between mb-2">
-                                <label class="block text-sm font-medium text-gray-700">Known word families</label>
+                                <label for="knownWords" class="block text-sm font-medium text-gray-700">
+                                    Known word families
+                                </label>
                                 <span id="knownWordsLabel" class="text-sm font-semibold text-gray-800">1500</span>
                             </div>
-                            <input id="knownWords" type="range" min="0" max="9000" step="50" value="1500" class="w-full">
+                            <input
+                                id="knownWords"
+                                type="range"
+                                min="0"
+                                max="9000"
+                                step="50"
+                                value="1500"
+                                aria-describedby="knownWordsLabel"
+                                class="w-full"
+                            >
                             <div class="flex justify-between text-xs text-gray-500 mt-1">
                                 <span>0</span><span>2k</span><span>4k</span><span>6k</span><span>9k</span>
                             </div>
                         </div>
 
+                        <!-- Transfer boost slider -->
                         <div class="mt-5">
                             <div class="flex items-center justify-between mb-2">
-                                <label class="block text-sm font-medium text-gray-700">Transfer boost (optional)</label>
+                                <label for="transferBoost" class="block text-sm font-medium text-gray-700">
+                                    Transfer boost (optional)
+                                </label>
                                 <span id="transferLabel" class="text-sm font-semibold text-gray-800">10%</span>
                             </div>
-                            <input id="transferBoost" type="range" min="0" max="40" step="1" value="10" class="w-full">
+                            <input
+                                id="transferBoost"
+                                type="range"
+                                min="0"
+                                max="40"
+                                step="1"
+                                value="10"
+                                aria-describedby="transferLabel"
+                                class="w-full"
+                            >
                             <p class="text-xs text-gray-500 mt-2">
                                 If your first language shares cognates or morphology, early recognition could behave like “extra” usable vocabulary.
                                 This slider is a conceptual lens, not a guarantee.
@@ -862,5 +900,3 @@
 
 </body>
 </html>
-
-
