Update links in index.html for TSI and game

--- a/training/index.html
+++ b/training/index.html
@@ -466,7 +466,7 @@
           <p style="margin:0; padding-top:14px; border-top:1px solid rgba(0,20,60,0.08); font-size: 16px; line-height:1.6; color:var(--ink);">
             🚀 <b>Accelerated by the TSI Method:</b><br/>
             This platform is designed as a tactical companion for the 
-            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/Tsi/" target="_blank" style="color:var(--accent); text-decoration:none; font-weight:800; border-bottom:2px solid currentColor;">TSI (Target Structure Immersion) Protocol</a>.
+            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/Tsi/index.html" target="_blank" style="color:var(--accent); text-decoration:none; font-weight:800; border-bottom:2px solid currentColor;">TSI (Target Structure Immersion) Protocol</a>.
             Rather than relying on rote memorization, this tool helps you leverage high-frequency clusters, cognates, and structural roots to "hack" fluency and decode new languages intuitively.
           </p>
 
@@ -479,7 +479,7 @@
                 <span style="opacity:0.7; font-size:12px;">(Keyboard Required ⌨️)</span>
               </div>
             </div>
-            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/plyglthvn/Language-Shooter.html" target="_blank" style="background:var(--accent); color:#fff; text-decoration:none; padding:8px 16px; border-radius:8px; font-size:13px; font-weight:700; white-space:nowrap; transition: filter 0.2s;" onmouseover="this.style.filter='brightness(1.2)'" onmouseout="this.style.filter='brightness(1)'">
+            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/game" target="_blank" style="background:var(--accent); color:#fff; text-decoration:none; padding:8px 16px; border-radius:8px; font-size:13px; font-weight:700; white-space:nowrap; transition: filter 0.2s;" onmouseover="this.style.filter='brightness(1.2)'" onmouseout="this.style.filter='brightness(1)'">
               Play Now 🚀
             </a>
           </div>
