--- a/training/index.html
+++ b/training/index.html
@@ -116,6 +116,7 @@
       font-size: 14px;    /* Larger font */
       font-weight: 700;   /* Bold text */
       color: var(--muted);
+      -webkit-user-select: none;
       user-select: none;
       transition: all .2s ease;
       display: inline-flex; 
@@ -173,6 +174,7 @@
       background: rgba(255,255,255,.70);
       font-size:12px; color:var(--muted);
       user-select:none;
+      -webkit-user-select:none;
     }
     .toggle input{ accent-color: var(--accent); }
 
@@ -188,6 +190,7 @@
       font-size:12px;
       color: var(--muted);
       user-select:none;
+      -webkit-user-select:none;
     }
     .lang-pill input{ accent-color: var(--accent2); }
     .lang-pill b{ color: var(--ink); font-weight:800; }
@@ -257,15 +260,17 @@
       top:0;
       z-index:3;
       background: rgba(248,252,255,.92);
+      -webkit-backdrop-filter: blur(12px);
       backdrop-filter: blur(12px);
       border-bottom:1px solid var(--line);
       font-size:12px;
       color: var(--muted);
       text-align:left;
       padding: 10px 12px;
-      white-space:nowrap;
-      cursor:pointer;
-      user-select:none;
+      white-space: nowrap;
+      cursor: pointer;
+      -webkit-user-select: none;
+      user-select: none;
     }
     thead th .th-sub{ display:block; font-weight:500; font-size:11px; color: rgba(88,112,134,.85); margin-top:2px; }
     tbody td{
@@ -466,7 +471,7 @@
           <p style="margin:0; padding-top:14px; border-top:1px solid rgba(0,20,60,0.08); font-size: 16px; line-height:1.6; color:var(--ink);">
             🚀 <b>Accelerated by the TSI Method:</b><br/>
             This platform is designed as a tactical companion for the 
-            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/tsi/index.html" target="_blank" style="color:var(--accent); text-decoration:none; font-weight:800; border-bottom:2px solid currentColor;">TSI (Target Structure Immersion) Protocol</a>.
+            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/tsi/index.html" target="_blank" rel="noopener" style="color:var(--accent); text-decoration:none; font-weight:800; border-bottom:2px solid currentColor;">TSI (Target Structure Immersion) Protocol</a>.
             Rather than relying on rote memorization, this tool helps you leverage high-frequency clusters, cognates, and structural roots to "hack" fluency and decode new languages intuitively.
           </p>
 
@@ -479,7 +484,7 @@
                 <span style="opacity:0.7; font-size:12px;">(Keyboard Required ⌨️)</span>
               </div>
             </div>
-            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/game" target="_blank" style="background:var(--accent); color:#fff; text-decoration:none; padding:8px 16px; border-radius:8px; font-size:13px; font-weight:700; white-space:nowrap; transition: filter 0.2s;" onmouseover="this.style.filter='brightness(1.2)'" onmouseout="this.style.filter='brightness(1)'">
+            <a href="https://gilbertfoust.github.io/Prodigy-Nest-Global/game" target="_blank" rel="noopener" style="background:var(--accent); color:#fff; text-decoration:none; padding:8px 16px; border-radius:8px; font-size:13px; font-weight:700; white-space:nowrap; transition: filter 0.2s;" onmouseover="this.style.filter='brightness(1.2)'" onmouseout="this.style.filter='brightness(1)'">
               Play Now 🚀
             </a>
           </div>
